# spotify-drf-api

./: .env.example  pyproject.toml  readme.md  requirements.txt
app/: asgi.py  urls.py  wsgi.py
app/settings/: base.py  local.py  production.py
modules/album/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
modules/album/migrations/: 0001_initial.py  0002_alter_album_duration.py  0003_alter_album_duration.py
modules/artist/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
modules/artist/migrations/: 0001_initial.py
modules/track/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
modules/track/migrations/: 0001_initial.py  0002_alter_track_duration.py  0003_alter_track_duration.py
modules/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
modules/users/migrations/: 0001_initial.py
tests/tests_album/: test_album_api.py
tests/tests_artist/: test_artist_api.py
tests/tests_track/: test_track_api.py
tests/tests_user/: test_user_api.py
